<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.wishwa.loginfunction.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/loginhome"
    android:clickable="true"
    android:id="@+id/mainlayout"
    android:onClick="hideSoftKeyboard">

    <LinearLayout
        android:layout_width="361dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="8dp">

        <TextView
            android:text="Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="132dp"
            android:textStyle="bold"
            android:textColor="#40E0D0"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:layout_marginLeft="102dp"
            android:gravity="center_horizontal"
            android:textColor="#ffffff"
            />

        <TextView
            android:text="Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="20sp"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="#40E0D0"
            />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/passwrd"
            android:layout_marginLeft="102dp"
            android:inputType="textPassword"
            android:gravity="center_horizontal"
            android:textColor="#ffffff" />

        <Button
            android:text="Login"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:id="@+id/login"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="15dp"
            android:background="#D3D3D3"
            android:textColor="#000000"
            android:onClick="clickButton"/>

    </LinearLayout>

</FrameLayout>

